Numbers (0, 1, 2, 3) to choose glyph to create
Added extract glyph to create motes (2)
Added terminus glyph to destroy motes (3)
Better direction selection when creating a move glyph (1)
Removed pointless prototype code
Game speed delinked with FPS, mote movement based on delta

--- a/engine.cfg
+++ b/engine.cfg
@@ -8,3 +8,10 @@ icon="res://icon.png"
 
 width=1600
 height=900
+
+[input]
+
+hex_move=[key(1)]
+hex_blank=[key(0)]
+hex_extract=[key(2)]
+hex_terminus=[key(3)]
